# resnet-image-recognition

./: .gitignore  Dockerfile  api-keys.txt  pyproject.toml  requirements.txt
app/: __init__.py  app.py
app/auth/: __init__.py  validate_api_key.py
app/handlers/: __init__.py  greet.py  health_check.py  recognize_image.py  upload_image.py
notes/: notes.md
resnet_image_recognition/: __init__.py
resnet_image_recognition/image_recognizer/: __init__.py  image_recognizer.py  imagenet_class_list.py  imagenet_classes.py
resnet_image_recognition/resnet/: __init__.py  basic_block.py  basic_block_stack.py  bottleneck.py  bottleneck_stack.py  resnet34.py  resnet50.py  utils.py
scripts/: build.sh
