[tool.poetry]
name = "resnet-image-recognition"
version = "0.1.0"
description = ""
authors = ["isaac-fei <isaac.omega.fei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
torchvision = "^0.19.1"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pydantic = "^2.9.2"
awslambdaric = "^2.2.1"
mangum = "^0.19.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
